# transformer

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: paths.py
docs/: adam.md  attention.md  difference_train_vs_eval.md  learning_rate.md  transformer-scaling.md
notebooks/: 4.ipynb  eda.ipynb  evaluate_analysis.ipynb  test.ipynb
scripts/: README.md
sheets/: Practical_1.ipynb  Practical_2.ipynb  Practical_3.ipynb  Practical_4.ipynb  Practical_5.ipynb  Practical_6.ipynb  Practical_7.ipynb  Practical_8.ipynb  Practical_9.ipynb
src/: dataset.py
src/config/: config.yaml  hyperparameters.yaml
src/evaluation/: main.py
src/experiment/data/: create_data.py  synthetic_data.py
src/experiment/evaluation/: main.py
src/experiment/models/: LoRa.py  SoftPrompt.py
src/run/: init_tokenizer.py  main.py
src/utils/: data_cleaning.py  lr_scheduler.py
storage/evaluate/: 3k_evaluation_results_greedy.csv  c9_evaluation_results_beam_search.csv  ea_evaluation_results_beam_search.csv  w10_evaluation_results_beam_search.csv  w15_evaluation_results_beam_search.csv  w2_evaluation_results_beam_search.csv  w3_evaluation_results_beam_search.csv  w3_v2_evaluation_results_beam_search.csv  w3_v3_evaluation_results_beam_search.csv  w3_v4_evaluation_results_beam_search.csv  w5_evaluation_results_beam_search.csv  w5_v3_evaluation_results_beam_search.csv
storage/gpt2_from_bpe/: merges.txt  vocab.json
tests/: practical_2_acc_test.py  practical_2_test.py  practical_4_test.py  practical_5_encoder_layer_test.py  practical_5_mha_test.py  practical_6_test.py
(+35 files in other folders)
